templates/rstudio_template.yaml
---
# Source: rstudio/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-rstudio
  labels:
    helm.sh/chart: rstudio-6.5.0
    app.kubernetes.io/name: rstudio
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    
  selector:
    app.kubernetes.io/name: rstudio
    app.kubernetes.io/instance: release-name
---
# Source: rstudio/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name-rstudio
  labels:
    helm.sh/chart: rstudio-6.5.0
    app.kubernetes.io/name: rstudio
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  serviceName: release-name-rstudio
  selector:
    matchLabels:
      app.kubernetes.io/name: rstudio
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rstudio
        app.kubernetes.io/instance: release-name
    spec:
      volumes:
        - name: home
          persistentVolumeClaim:
            claimName: release-name-rstudio
        - name: release-name-rstudio-data
          emptyDir: {}
        - name: config-coresite
          configMap:
            name: release-name-rstudio-configmapcoresite
        - name: config-sparkconf
          configMap:
            name: release-name-rstudio-configmapsparkconf
        - name: hive-config
          configMap:
            name: release-name-rstudio-configmaphive
      serviceAccountName: release-name-rstudio
      securityContext:
        fsGroup: 1000
      subdomain: release-name-rstudio
      hostname: rstudio
      containers:
        - name: rstudio
          securityContext:
            {}
          image: "inseefrlab/rstudio:r4.2.0-spark3.2.0"
          command: ["/bin/sh","-c"]
          args: ["/data/onyxia-init.sh /init"]
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8787
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          startupProbe:
            failureThreshold: 60
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5        
          resources:
            {}
          volumeMounts:
            - mountPath: /data
              name: release-name-rstudio-data
            - mountPath: /home/rstudio
              name: home
            - mountPath: /opt/hadoop/etc/hadoop/core-site.xml
              subPath: core-site.xml
              name: config-coresite
            - name: config-sparkconf
              mountPath: /opt/spark/conf/spark-defaults.conf
              subPath: spark-defaults.conf
            - name: hive-config
              mountPath: /opt/hive/conf/hive-site.xml
              subPath: hive-site.xml
---
# Source: rstudio/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-rstudio
  labels:
    helm.sh/chart: rstudio-6.5.0
    app.kubernetes.io/name: rstudio
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0
spec:
  tls:
    - hosts:
        - "chart-example.local"
  rules:
    - host: "chart-example.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-rstudio
                port: 
                  number: 80
---
# Source: rstudio/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-rstudio-test-connection"
  labels:
    helm.sh/chart: rstudio-6.5.0
    app.kubernetes.io/name: rstudio
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['release-name-rstudio:80']
  restartPolicy: Never
